update pre-commit hooks files regex

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,4 +3,4 @@
     description: prevents untagged models from being committed
     entry: dbt-ensure-tag
     language: python
-    files: '*.sql'
+    files: '\.sql$'
