upgrade to dbt programmatic invocations

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dbt_ensure_tag
-version = 0.0.2
+version = 0.0.3
 description = checks dbt models for tags
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -16,6 +16,8 @@ classifiers =
 
 [options]
 py_modules = dbt_ensure_tag
+install_requires =
+    dbt-core >=1.5.0
 python_requires = >=3.8
 
 [options.entry_points]
